--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,8 @@ version: '2'
 services: 
     microservice:
         build: .
-        image: cloud-native-go:1.0.1-alpine
+        image: simple-go-http-rest:1.0.1
         environment: 
-        - PORT=9090
+        - PORT=8080
         ports: 
-        - "9090:9090"
-    nginx:
-        image: "nginx:1.11.9"
-        ports: 
-        - "8080:80"
-        links: 
-        - microservice
+        - "8080:8080"
